contact resource update

--- a/about-industrial-actuators.html
+++ b/about-industrial-actuators.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Susin Group — Industrial Actuators & Gearboxes</title>
     <meta name="description" content="About Susin Group — manufacturer of industrial actuators and gearboxes providing motion control solutions worldwide. Learn our history, mission, and certifications.">
+    <meta name="keywords" content="about us, industrial actuators, gearboxes, motion control, manufacturer, company history, mission values">
     <link rel="canonical" href="https://www.susingroup.com/about-industrial-actuators.html" />
     <link rel="icon" href="logo.jpg">
 
