--- a/about.html
+++ b/about.html
@@ -15,6 +15,7 @@
         <meta name="twitter:creator" content="@susingroup">
         <title>About Us | Industrial Actuators & Gearboxes</title>
         <meta name="description" content="About Susin Group — manufacturer of industrial actuators and gearboxes providing motion control solutions worldwide. Learn our history, mission, and certifications.">
+        <meta name="keywords" content="about us, company history, mission values, industrial actuators, gearboxes, certifications, ISO 9001, ATEX, quality excellence">
         <link rel="canonical" href="https://www.susingroup.com/about.html" />
         <link rel="icon" href="logo.jpg">
 
@@ -172,9 +173,9 @@
         <main id="main-content">
 
         <!-- Page Header -->
-    <section class="page-header">
+    <section class="page-header" aria-labelledby="page-title">
         <div class="container">
-            <h1>About Us</h1>
+            <h1 id="page-title">About Us</h1>
             <p>Leading the industry in motion control solutions</p>
 
             <nav aria-label="Breadcrumb">
@@ -187,21 +188,21 @@
     </section>
 
     <!-- About Content -->
-    <section class="about-content">
+    <section class="about-content" aria-labelledby="story-heading">
         <div class="container">
             <div class="about-section">
-                <h2>Our Story</h2>
+                <h2 id="story-heading">Our Story</h2>
                 <p>A true first-generation entrepreneur, Muthukumar Sunderrajan laid the foundation of this empire in 1992 with "SUMKA SONS", starting as a small trading company with no prior industry experience or family business background. Through dedication, innovation, and commitment to excellence, we have grown into a leading manufacturer of industrial actuators and gearboxes.</p>
                 <p>Today, we serve customers worldwide across diverse industries, providing reliable motion control solutions for critical applications. Our journey from a small trading company to an established industrial manufacturer reflects our commitment to quality, innovation, and customer satisfaction.</p>
             </div>
 
             <div class="about-section">
-                <h2>Our Mission</h2>
+                <h2 id="mission-heading">Our Mission</h2>
                 <p>To provide world-class motion control solutions that enhance operational efficiency, reliability, and safety for our customers across all industries. We strive to be the preferred partner for industrial automation and control systems.</p>
             </div>
 
             <div class="about-section">
-                <h2>Our Values</h2>
+                <h2 id="values-heading">Our Values</h2>
                 <div class="values-grid">
                     <div class="value-item">
                         <i class="fas fa-award"></i>
@@ -227,7 +228,7 @@
             </div>
 
             <div class="about-section">
-                <h2>Certifications & Standards</h2>
+                <h2 id="certifications-heading">Certifications & Standards</h2>
                 <p>We maintain the highest standards of quality and compliance:</p>
                 <div class="certifications">
                     <div class="cert-item">
@@ -250,7 +251,7 @@
             </div>
 
             <div class="about-section">
-                <h2>Why Choose Us</h2>
+                <h2 id="why-choose-heading">Why Choose Us</h2>
                 <div class="why-choose-grid">
                     <div class="why-item">
                         <h3><i class="fas fa-check-circle"></i> Proven Track Record</h3>
