--- a/careers.html
+++ b/careers.html
@@ -6,6 +6,8 @@
     <meta name="theme-color" content="#c41e3a">
     <title>Careers — Join Susin Group</title>
     <meta name="description" content="Explore careers at Susin Group: open positions, internships, benefits and how to apply. Grow your engineering career with us.">
+    <meta name="keywords" content="careers, jobs, engineering jobs, internships, employment, hiring">
+    <link rel="canonical" href="https://www.susingroup.com/careers.html">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <script type="application/ld+json">
@@ -134,16 +136,16 @@
         </div>
     </nav>
 
-    <section class="page-header">
+    <section class="page-header" aria-labelledby="careers-title">
         <div class="container">
-            <h1>Careers at Susin Group</h1>
+            <h1 id="careers-title">Careers at Susin Group</h1>
             <p>Join a team building industrial automation products and solutions for global customers. Explore open roles, internships and growth opportunities.</p>
         </div>
     </section>
 
     <main class="container">
-        <section id="openings" class="spacing-lg">
-            <h2 class="section-title">Open Positions</h2>
+        <section id="openings" class="spacing-lg" aria-labelledby="openings-heading">
+            <h2 id="openings-heading" class="section-title">Open Positions</h2>
             <p class="section-subtitle">We update openings regularly. If you don't find a role that fits, please submit a speculative application via the form below.</p>
 
             <div class="products-grid">
@@ -179,8 +181,8 @@
             </div>
         </section>
 
-        <section id="life" class="spacing-lg">
-            <h2 class="section-title">Life at Susin</h2>
+        <section id="life" class="spacing-lg" aria-labelledby="life-heading">
+            <h2 id="life-heading" class="section-title">Life at Susin</h2>
             <p class="section-subtitle">We foster an engineering-first culture with a focus on safety, quality and continuous learning.</p>
             <div class="features-grid">
                 <div class="feature-item">
@@ -201,8 +203,8 @@
             </div>
         </section>
 
-        <section id="benefits" class="spacing-lg">
-            <h2 class="section-title">Benefits</h2>
+        <section id="benefits" class="spacing-lg" aria-labelledby="benefits-heading">
+            <h2 id="benefits-heading" class="section-title">Benefits</h2>
             <ul class="feature-list">
                 <li><i class="fas fa-check"></i> Competitive salary and performance bonus</li>
                 <li><i class="fas fa-check"></i> Health insurance and wellness programs</li>
@@ -211,8 +213,8 @@
             </ul>
         </section>
 
-        <section id="internships" class="spacing-lg">
-            <h2 class="section-title">Internships & Early Careers</h2>
+        <section id="internships" class="spacing-lg" aria-labelledby="internships-heading">
+            <h2 id="internships-heading" class="section-title">Internships & Early Careers</h2>
             <p class="section-subtitle">We offer internships for engineering students and recent graduates — exposure to product development and field testing.</p>
             <div class="products-grid">
                 <article class="product-card">
@@ -232,8 +234,8 @@
             </div>
         </section>
 
-        <section id="apply" class="spacing-lg">
-            <h2 class="section-title">How to Apply</h2>
+        <section id="apply" class="spacing-lg" aria-labelledby="apply-heading">
+            <h2 id="apply-heading" class="section-title">How to Apply</h2>
             <p class="section-subtitle">Use the form below to submit your CV and a short message. Our recruitment team will review applications and follow up.</p>
 
             <div class="contact-form-wrapper">
