--- a/contact-support-sales.html
+++ b/contact-support-sales.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Susin Group — Sales, Support & Offices</title>
     <meta name="description" content="Contact Susin Group for product inquiries, quotes, technical support, and global office locations. We're here to help with motion control solutions.">
+    <meta name="keywords" content="sales, support, contact, global locations, technical support, offices, customer service">
     <link rel="canonical" href="https://www.susingroup.com/contact-support-sales.html" />
     <link rel="icon" href="logo.jpg">
 
