--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,7 @@
         <meta name="twitter:creator" content="@susingroup">
         <title>Contact Us | Industrial Actuators & Gearboxes</title>
         <meta name="description" content="Contact Susin Group for product inquiries, quotes, technical support, and global office locations. We're here to help with motion control solutions.">
+        <meta name="keywords" content="contact us, sales inquiry, technical support, office locations, customer service, inquiry form, support tickets">
         <link rel="canonical" href="https://www.susingroup.com/contact.html" />
         <link rel="icon" href="logo.jpg">
 
@@ -171,9 +172,9 @@
         <main id="main-content">
 
         <!-- Page Header -->
-    <section class="page-header">
+    <section class="page-header" aria-labelledby="page-title">
         <div class="container">
-            <h1>Contact Us</h1>
+            <h1 id="page-title">Contact Us</h1>
             <p>Get in touch with our team for expert assistance</p>
 
             <nav aria-label="Breadcrumb">
@@ -186,10 +187,10 @@
     </section>
 
     <!-- Contact Highlights (mirrors live site) -->
-    <section class="contact-highlights" aria-hidden="false">
+    <section class="contact-highlights" aria-labelledby="phone-heading">
         <div class="container">
             <div class="phone-cta">
-                <h2>Talk to an expert</h2>
+                <h2 id="phone-heading">Talk to an expert</h2>
                 <p class="phone-number"><a href="tel:+917708097242">+91 77080 97242</a> | <a href="tel:+916384063034">+91 63840 63034</a></p>
                 <p class="contact-note">Request a callback or email us at <a href="mailto:info@susin.in">info@susin.in</a></p>
             </div>
@@ -197,11 +198,11 @@
     </section>
 
     <!-- Contact Section -->
-    <section class="contact-section">
+    <section class="contact-section" aria-labelledby="contact-heading">
         <div class="container">
             <div class="contact-wrapper">
                 <div class="contact-info">
-                    <h2>Get In Touch</h2>
+                    <h2 id="contact-heading">Get In Touch</h2>
                     <p>Our team is ready to assist you with product selection, technical support, or any inquiries. Reach out to us through any of the following channels.</p>
                     
                     <div class="contact-details">
