--- a/industries-served.html
+++ b/industries-served.html
@@ -15,6 +15,7 @@
     <meta name="twitter:creator" content="@susingroup">
     <title>Industries Served — Oil & Gas, Water, Power & More</title>
     <meta name="description" content="Industries served by Susin Group: Oil & Gas, Water Treatment, Power Generation, Chemical, Marine, Pharmaceutical, and more.">
+    <meta name="keywords" content="industries, oil and gas, water treatment, power generation, chemical processing, marine, pharmaceutical, industrial solutions">
     <link rel="canonical" href="https://www.susingroup.com/industries-served.html" />
     <link rel="icon" href="logo.jpg">
 
