--- a/industries.html
+++ b/industries.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Industries | Industrial Actuators & Gearboxes</title>
         <meta name="description" content="Industries served by Susin Group: Oil & Gas, Water Treatment, Power Generation, Chemical, Marine, Pharmaceutical, and more.">
+        <meta name="keywords" content="industrial actuators, oil and gas, water treatment, power generation, chemical processing, marine offshore, pharmaceutical, gearboxes solutions">
         <link rel="canonical" href="https://www.susingroup.com/industries.html" />
         <link rel="icon" href="logo.jpg">
 
@@ -157,9 +158,9 @@
         <main id="main-content">
 
         <!-- Page Header -->
-    <section class="page-header">
+    <section class="page-header" aria-labelledby="page-title">
         <div class="container">
-            <h1>Industries We Serve</h1>
+            <h1 id="page-title">Industries We Serve</h1>
             <p>Providing reliable motion control solutions across diverse industrial sectors</p>
 
             <nav aria-label="Breadcrumb">
@@ -172,8 +173,9 @@
     </section>
 
     <!-- Industries Grid -->
-    <section class="industries-detail">
+    <section class="industries-detail" aria-labelledby="industries-heading">
         <div class="container">
+            <h2 id="industries-heading" class="sr-only">Our Industry Solutions</h2>
             <div class="industry-card">
                 <div class="industry-icon"><i class="fas fa-industry"></i></div>
                 <h2>Oil & Gas</h2>
