--- a/products-actuators-gearboxes.html
+++ b/products-actuators-gearboxes.html
@@ -15,6 +15,7 @@
     <meta name="twitter:creator" content="@susingroup">
     <title>Products — Pneumatic, Gearboxes, Electro-Hydraulic & Electrical Actuators</title>
     <meta name="description" content="Product portfolio: Pneumatic Scotch Yoke actuators, mechanical gearboxes, electro-hydraulic and electrical actuators for industrial automation.">
+    <meta name="keywords" content="pneumatic actuators, gearboxes, electro-hydraulic actuators, electrical actuators, rotary actuators, industrial automation">
     <link rel="canonical" href="https://www.susingroup.com/products-actuators-gearboxes.html" />
     <link rel="icon" href="logo.jpg">
 
@@ -34,10 +35,11 @@
 
     <script type="application/ld+json">
     {
-      "@context": "https://schema.org",
+      "@context": "https://schema.org/",
       "@type": "CollectionPage",
       "name": "Products - Susin Group",
-      "url": "https://www.susingroup.com/products-actuators-gearboxes.html"
+      "url": "https://www.susingroup.com/products-actuators-gearboxes.html",
+      "description": "Complete product portfolio of industrial actuators and gearboxes for motion control applications"
     }
     </script>
   </head>
@@ -176,9 +178,9 @@
     </nav>
 
     <!-- Page Header -->
-    <section class="page-header">
+    <section class="page-header" aria-labelledby="page-title">
         <div class="container">
-            <h1>Our Products</h1>
+            <h1 id="page-title">Our Products</h1>
             <p>Comprehensive range of industrial actuators and gearboxes for critical applications</p>
 
             <nav aria-label="Breadcrumb">
