--- a/products.html
+++ b/products.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Products | Industrial Actuators & Gearboxes</title>
         <meta name="description" content="Product portfolio: Pneumatic Scotch Yoke rotary actuators, gearboxes, electro-hydraulic and electrical actuators for industrial automation.">
+        <meta name="keywords" content="pneumatic actuators, gearboxes, electro-hydraulic, electrical actuators, industrial automation, motion control, rotary actuators">
         <link rel="canonical" href="https://www.susingroup.com/products.html" />
         <link rel="icon" href="logo.jpg">
 
