--- a/resources.html
+++ b/resources.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Resources | Industrial Actuators & Gearboxes</title>
         <meta name="description" content="Datasheets, manuals, sizing programs, FAQs and technical resources for Susin Group products and solutions.">
+        <meta name="keywords" content="technical documentation, datasheets, manuals, sizing programs, CAD drawings, FAQs, actuator selection, product resources">
         <link rel="canonical" href="https://www.susingroup.com/resources.html" />
         <link rel="icon" href="logo.jpg">
 
@@ -157,9 +158,9 @@
         <main id="main-content">
 
         <!-- Page Header -->
-    <section class="page-header">
+    <section class="page-header" aria-labelledby="page-title">
         <div class="container">
-            <h1>Resources</h1>
+            <h1 id="page-title">Resources</h1>
             <p>Technical documentation, downloads, and support materials</p>
 
             <nav aria-label="Breadcrumb">
@@ -172,8 +173,9 @@
     </section>
 
     <!-- Resources Section -->
-    <section class="resources-content">
+    <section class="resources-content" aria-labelledby="resources-heading">
         <div class="container">
+            <h2 id="resources-heading" class="sr-only">Technical Resources and Downloads</h2>
             <div class="resources-tabs">
                 <button class="tab-btn active" data-tab="datasheets">Datasheets</button>
                 <button class="tab-btn" data-tab="manuals">Manuals</button>
