--- a/services.html
+++ b/services.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Services | Industrial Actuators & Gearboxes</title>
         <meta name="description" content="Services including installation, commissioning, maintenance, training, customization and spare parts for industrial actuators and gearboxes.">
+        <meta name="keywords" content="installation commissioning, maintenance support, training programs, customization services, spare parts, technical support, repair services">
         <link rel="canonical" href="https://www.susingroup.com/services.html" />
         <link rel="icon" href="logo.jpg">
 
@@ -161,9 +162,9 @@
         <main id="main-content">
 
         <!-- Page Header -->
-    <section class="page-header">
+    <section class="page-header" aria-labelledby="page-title">
         <div class="container">
-            <h1>Our Services</h1>
+            <h1 id="page-title">Our Services</h1>
             <p>Comprehensive support throughout the entire product lifecycle</p>
 
             <nav aria-label="Breadcrumb">
@@ -176,8 +177,9 @@
     </section>
 
     <!-- Services Section -->
-    <section class="services-detail">
+    <section class="services-detail" aria-labelledby="services-heading">
         <div class="container">
+            <h2 id="services-heading" class="sr-only">Our Service Offerings</h2>
             <div class="service-card">
                 <div class="service-icon"><i class="fas fa-wrench"></i></div>
                 <h2>Installation & Commissioning</h2>
