--- a/resources-technical-docs.html
+++ b/resources-technical-docs.html
@@ -8,6 +8,7 @@
     <link rel="apple-touch-icon" href="logo.jpg">
     <title>Resources — Datasheets, Manuals & Sizing Tools</title>
     <meta name="description" content="Datasheets, manuals, sizing programs, FAQs and technical resources for Susin Group products and solutions.">
+    <meta name="keywords" content="datasheets, manuals, technical documentation, sizing programs, CAD drawings, FAQs, product resources, downloads">
     <link rel="canonical" href="https://www.susingroup.com/resources-technical-docs.html" />
     <link rel="icon" href="logo.jpg">
 
