--- a/services-installation-maintenance.html
+++ b/services-installation-maintenance.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Services — Installation, Maintenance & Support for Actuators</title>
     <meta name="description" content="Services including installation, commissioning, maintenance, training, customization and spare parts for industrial actuators and gearboxes.">
+    <meta name="keywords" content="installation, commissioning, maintenance, technical support, training, customization, spare parts, repair services">
     <link rel="canonical" href="https://www.susingroup.com/services-installation-maintenance.html" />
     <link rel="icon" href="logo.jpg">
 
