--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
         </script>
     </head>
 <body>
+    <a class="skip-link" href="#main-content">Skip to content</a>
     <!-- Navigation -->
     <nav class="navbar">
         <div class="container">
