--- a/services-installation-maintenance.html
+++ b/services-installation-maintenance.html
@@ -130,7 +130,19 @@
                     <li class="dropdown">
                         <a href="#">Global Presence <i class="fas fa-chevron-down"></i></a>
                         <ul class="dropdown-menu">
-                            <li><a href="index.html#india">India</a></li>
+                            <li class="has-panel">
+                                <a href="http://www.susingroup.com/global-presence/susin-itork-india" target="_blank" rel="noopener">India</a>
+                                <div class="submenu-panel" role="region" aria-label="Susin I-Tork India quick info">
+                                    <h4>Susin I-Tork India</h4>
+                                    <p>Susin I-Tork India specialises in providing reliable flow-control and valve automation solutions. Established in 2007 as a JV with I-TORK Controls (South Korea), the facility now manufactures pneumatic actuators in India and serves power, cement, sugar, chemical and energy sectors.</p>
+                                    <ul class="submenu-contacts">
+                                        <li><strong>Phone:</strong> <a href="tel:+917708097242">+91 77080 97242</a></li>
+                                        <li><strong>Email:</strong> <a href="mailto:techsales@susinitork.in">techsales@susinitork.in</a></li>
+                                        <li><strong>Location:</strong> Coimbatore, India</li>
+                                    </ul>
+                                    <p class="submenu-actions"><a class="btn btn-sm" href="http://www.susingroup.com/global-presence/susin-itork-india" target="_blank" rel="noopener">View full profile</a> <a class="btn btn-link" href="contact.html#locations">Contact local office</a></p>
+                                </div>
+                            </li>
                             <li><a href="index.html#middle-east">Middle East</a></li>
                             <li><a href="index.html#europe">Europe</a></li>
                             <li><a href="index.html#far-east">Far East</a></li>
