--- a/global-presence/susin-itork-india.html
+++ b/global-presence/susin-itork-india.html
@@ -7,6 +7,27 @@
     <meta name="description" content="Susin I-Tork India — valve automation and actuator manufacturing, operations and milestones. Contact details and team." />
     <link rel="stylesheet" href="/css/style.css">
     <link rel="icon" href="/logo.jpg">
+        <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "LocalBusiness",
+            "name": "Susin I-Tork India",
+            "url": "https://www.susingroup.com/global-presence/susin-itork-india",
+            "telephone": "+91-77080-97242",
+            "email": "techsales@susinitork.in",
+            "address": {
+                "@type": "PostalAddress",
+                "addressLocality": "Coimbatore",
+                "addressRegion": "TN",
+                "addressCountry": "IN"
+            },
+            "description": "Valve automation and actuator manufacturing; established 2007. Serves power, cement, sugar, chemical and energy sectors.",
+            "sameAs": [
+                "https://www.linkedin.com/company/susin-group",
+                "https://www.facebook.com/susingroup"
+            ]
+        }
+        </script>
 </head>
 <body>
     <nav class="navbar">
@@ -24,7 +45,10 @@
 
     <main id="main-content">
         <section class="container" style="padding:32px 24px;">
-            <h1>Susin I-Tork India</h1>
+            <div style="display:flex;align-items:center;gap:14px;">
+                <img src="/assets/img/global-presence/thumb-placeholder.jpg" alt="Susin I-Tork India" style="width:84px;height:56px;object-fit:cover;border-radius:6px;">
+                <h1 style="margin:0;">Susin I-Tork India</h1>
+            </div>
 
             <p><strong>About</strong></p>
             <p>Susin I-Tork India specialises in providing reliable flow-control and valve automation solutions in challenging environments. Founded in 2007 as a joint venture with I-TORK Controls (South Korea), the organisation initially focused on marketing I-TORK actuators and later moved to manufacture pneumatic actuators locally. The facility expanded in 2017 and now serves major industries including power, cement, sugar, chemical and energy. Susin I-Tork India has been exporting pneumatic actuators from its Indian plants since 2020.</p>
