--- a/products-actuators-gearboxes.html
+++ b/products-actuators-gearboxes.html
@@ -140,6 +140,7 @@
                             <li class="has-panel">
                                 <a href="global-presence/susin-itork-india.html">India</a>
                                 <div class="submenu-panel" role="region" aria-label="Susin I-Tork India quick info">
+                                    <img src="/assets/img/global-presence/thumb-placeholder.svg" alt="Susin I-Tork India" class="submenu-thumb">
                                     <h4>Susin I-Tork India</h4>
                                     <p>Susin I-Tork India specialises in providing reliable flow-control and valve automation solutions. Established in 2007 as a JV with I-TORK Controls (South Korea), the facility now manufactures pneumatic actuators in India and serves power, cement, sugar, chemical and energy sectors.</p>
                                     <ul class="submenu-contacts">
