--- a/about.html
+++ b/about.html
@@ -131,6 +131,18 @@
                             <li><a href="about.html#why-choose">Why Choose Us</a></li>
                         </ul>
                     </li>
+                    </li>
+                    <li class="dropdown">
+                        <a href="careers.html">Careers <i class="fas fa-chevron-down"></i></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="careers.html#openings">Open Positions</a></li>
+                            <li><a href="careers.html#life">Life at Susin</a></li>
+                            <li><a href="careers.html#benefits">Benefits</a></li>
+                            <li><a href="careers.html#internships">Internships</a></li>
+                            <li><a href="careers.html#apply">How to Apply</a></li>
+                            <li><a href="careers.html#contact-hr">Contact HR</a></li>
+                        </ul>
+                    </li>
                     <li class="dropdown">
                         <a href="resources.html">Resources <i class="fas fa-chevron-down"></i></a>
                         <ul class="dropdown-menu">
