--- a/contact-support-sales.html
+++ b/contact-support-sales.html
@@ -118,6 +118,17 @@
                         </ul>
                     </li>
                     <li class="dropdown">
+                        <a href="careers.html">Careers <i class="fas fa-chevron-down"></i></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="careers.html#openings">Open Positions</a></li>
+                            <li><a href="careers.html#life">Life at Susin</a></li>
+                            <li><a href="careers.html#benefits">Benefits</a></li>
+                            <li><a href="careers.html#internships">Internships</a></li>
+                            <li><a href="careers.html#apply">How to Apply</a></li>
+                            <li><a href="careers.html#contact-hr">Contact HR</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown">
                         <a href="resources-technical-docs.html">Resources <i class="fas fa-chevron-down"></i></a>
                         <ul class="dropdown-menu">
                             <li><a href="resources-technical-docs.html#datasheets">Datasheets</a></li>
