--- a/products.html
+++ b/products.html
@@ -3,6 +3,13 @@
 <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="HandheldFriendly" content="true">
+        <meta name="mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="format-detection" content="telephone-no">
+        <meta name="theme-color" content="#c41e3a">
+        <link rel="apple-touch-icon" href="assets/img/icons/apple-touch-icon.png">
+        <meta name="robots" content="index, follow">
         <title>Products | Industrial Actuators & Gearboxes</title>
         <meta name="description" content="Product portfolio: Pneumatic Scotch Yoke rotary actuators, gearboxes, electro-hydraulic and electrical actuators for industrial automation.">
         <meta name="keywords" content="pneumatic actuators, gearboxes, electro-hydraulic, electrical actuators, industrial automation, motion control, rotary actuators">
@@ -10,6 +17,9 @@
         <link rel="icon" href="logo.jpg">
 
         <!-- Performance hints -->
+        <link rel="dns-prefetch" href="https://fonts.googleapis.com">
+        <link rel="dns-prefetch" href="https://fonts.gstatic.com">
+        <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
         <link rel="preload" href="css/style.css" as="style">
@@ -19,6 +29,9 @@
 
         <!-- Open Graph / Twitter -->
         <meta property="og:type" content="website">
+        <meta property="og:site_name" content="Susin Group">
+        <meta name="twitter:site" content="@susingroup">
+        <meta name="twitter:creator" content="@susingroup">
         <meta property="og:title" content="Products | Industrial Actuators & Gearboxes">
         <meta property="og:description" content="Product portfolio: Pneumatic, Gearboxes, Electro-Hydraulic and Electrical Actuators for industrial automation.">
         <meta property="og:url" content="https://www.susingroup.com/products.html">
@@ -36,6 +49,7 @@
         </script>
     </head>
 <body>
+    <a class="skip-link" href="#main-content">Skip to content</a>
     <!-- Navigation -->
     <nav class="navbar">
         <div class="container">
