--- a/industries.html
+++ b/industries.html
@@ -3,6 +3,13 @@
 <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="HandheldFriendly" content="true">
+        <meta name="mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="format-detection" content="telephone-no">
+        <meta name="theme-color" content="#c41e3a">
+        <link rel="apple-touch-icon" href="assets/img/icons/apple-touch-icon.png">
+        <meta name="robots" content="index, follow">
         <title>Industries | Industrial Actuators & Gearboxes</title>
         <meta name="description" content="Industries served by Susin Group: Oil & Gas, Water Treatment, Power Generation, Chemical, Marine, Pharmaceutical, and more.">
         <meta name="keywords" content="industrial actuators, oil and gas, water treatment, power generation, chemical processing, marine offshore, pharmaceutical, gearboxes solutions">
@@ -10,6 +17,9 @@
         <link rel="icon" href="logo.jpg">
 
         <!-- Performance hints -->
+        <link rel="dns-prefetch" href="https://fonts.googleapis.com">
+        <link rel="dns-prefetch" href="https://fonts.gstatic.com">
+        <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
         <link rel="preload" href="css/style.css" as="style">
@@ -19,6 +29,9 @@
 
         <!-- Open Graph / Twitter -->
         <meta property="og:type" content="website">
+        <meta property="og:site_name" content="Susin Group">
+        <meta name="twitter:site" content="@susingroup">
+        <meta name="twitter:creator" content="@susingroup">
         <meta property="og:title" content="Industries | Industrial Actuators & Gearboxes">
         <meta property="og:description" content="Industries served by Susin Group: Oil & Gas, Water Treatment, Power Generation, Chemical, Marine, Pharmaceutical, and more.">
         <meta property="og:url" content="https://www.susingroup.com/industries.html">
